--- a/index.html
+++ b/index.html
@@ -81,21 +81,26 @@
 
 <div class="container">
     <h1>Welcome to My Page!</h1>
+    <p>Hello! My name is <strong>Jiahong Zhen</strong>. Below you'll find a bit more about me, including my hobbies, my favorite food, and a fun fact!</p>
 
     <div class="info-box">
         <h2>Name</h2>
+        <p>Jiahong Zhen</p>
     </div>
 
     <div class="info-box">
         <h2>Hobbies</h2>
+        <p>Swimming</p>
     </div>
 
     <div class="info-box">
         <h2>Favorite Food</h2>
+        <p>Sushi</p>
     </div>
 
     <div class="info-box">
         <h2>Fun Fact</h2>
+        <p>Nothing special… just a regular person trying to survive deadlines and WiFi issues.</p>
     </div>
 </div>
 
