--- a/index.html
+++ b/index.html
@@ -43,22 +43,22 @@
 
     <div class="info-box">
         <h2>Name</h2>
-        <p>[Their Name]</p>
+        <p>Steven Y</p>
     </div>
 
     <div class="info-box">
         <h2>Hobbies</h2>
-        <p>[Their Hobbies]</p>
+        <p>F-16</p>
     </div>
 
     <div class="info-box">
         <h2>Favorite Food</h2>
-        <p>[Their Favorite Food]</p>
+        <p>F-15EX</p>
     </div>
 
     <div class="info-box">
         <h2>Fun Fact</h2>
-        <p>[A Fun Fact About Them]</p>
+        <p>F-16</p>
     </div>
 </div>
 
